# wasm-platform

./: .envrc  .gitignore  Cargo.toml  Dockerfile.deps  Makefile  README.md  Tiltfile  setup-sql-hello.sh  wasm-platform.code-workspace
.github/: copilot-instructions.md
.github/agents/: wasm-platform.agent.md
.github/workflows/: copilot-setup-steps.yml
components/cli/: README.md
components/crd-operator/: README.md
components/execution-host/: Cargo.toml  Dockerfile  README.md  Tiltfile  build.rs
components/execution-host/helm/: Chart.yaml  values.yaml
components/execution-host/helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
components/execution-host/src/: config.rs  config_sync.rs  host_kv.rs  host_log.rs  host_messaging.rs  host_metrics.rs  host_sql.rs  main.rs  metrics.rs  module_cache.rs  modules.rs  nats.rs  oci.rs  runtime.rs  sql_pool.rs
components/gateway/: Cargo.toml  Dockerfile  README.md  Tiltfile  build.rs
components/gateway/helm/: Chart.yaml  values.yaml
components/gateway/helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
components/gateway/src/: config.rs  http_server.rs  main.rs  nats.rs  route_sync.rs  route_table.rs
components/module-cache/: Cargo.toml  Dockerfile  README.md  Tiltfile
components/module-cache/helm/: Chart.yaml  values.yaml
components/module-cache/helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
components/module-cache/src/: main.rs
components/wp-databases/: Chart.yaml  Tiltfile  values.yaml
components/wp-databases/templates/: _helpers.tpl  nats.yaml  postgres.yaml  redis.yaml
components/wp-operator/: Dockerfile  Makefile  README.md  Tiltfile  go.mod  go.sum  wasm-platform.code-workspace
components/wp-operator/cmd/: main.go
components/wp-operator/helm/: Chart.yaml  values.yaml
docs/: architecture.md  contributions.md  plan.md  standards.md  todo.md
examples/counter-app/: README.md  Tiltfile
examples/counter-app/http-handler/: Cargo.toml
examples/counter-app/k8s/: application.yaml
examples/demo-app/: README.md  Tiltfile
examples/demo-app/http-handler/: Cargo.toml
examples/demo-app/k8s/: application.yaml
examples/demo-app/message-handler/: Cargo.toml
examples/hello-world/: Cargo.toml  README.md  Tiltfile
examples/hello-world/k8s/: application.yaml
examples/hello-world/src/: lib.rs
examples/message-counter/: Cargo.toml  README.md  Tiltfile
examples/message-counter/k8s/: application.yaml
examples/message-counter/src/: lib.rs
examples/sql-hello/: Cargo.toml  README.md  Tiltfile  migrations.Dockerfile
examples/sql-hello/examples/: insert-test.rs  query.rs  setup.rs
examples/sql-hello/fns/insert-test/: Cargo.toml
examples/sql-hello/fns/insert-test/src/: lib.rs
examples/sql-hello/fns/query/: Cargo.toml
examples/sql-hello/fns/query/src/: lib.rs
examples/sql-hello/fns/setup/: Cargo.toml
examples/sql-hello/fns/setup/src/: lib.rs
examples/sql-hello/http-handler/: Cargo.toml
examples/sql-hello/http-handler/src/: lib.rs
examples/sql-hello/k8s/: application.yaml  seed-job.yaml
examples/sql-hello/migrations/: 001-create-greetings-apply.sql
framework/: runtime.wit
helm/wasm-platform/: Chart.yaml  values.yaml
helm/wasm-platform/crds/: db-operator.benjamin-wright.github.com_postgrescredentials.yaml  db-operator.benjamin-wright.github.com_rediscredentials.yaml
lib/platform-common/: Cargo.toml
tests/e2e/: Tiltfile  e2e_test.go  go.mod
tilt/: namespace.Tiltfile  workspace-deps.Tiltfile
(+36 files in other folders)
