[package]
name = "execution-host"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"

[dependencies]
wasmtime = { version = "42.0.1", features = ["component-model", "async"] }
wasmtime-wasi = "42.0.1"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.8.8"
async-nats = "0.46.0"
futures-util = "0.3.32"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tonic = "0.12"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
oci-distribution = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = "1"
prometheus = "0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
dashmap = "6"
platform-common = { path = "../../lib/platform-common" }

[build-dependencies]
tonic-build = "0.12"
