[package]
name = "gateway"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"

[dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net", "time"] }
axum = "0.8.8"
async-nats = "0.46.0"
futures-util = "0.3.32"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tonic-build = "0.12"
